--- a/views/footer.html
+++ b/views/footer.html
@@ -1,6 +1,6 @@
-<footer class="col-xs-12 sidebar-footer">
+<footer class="col-xs-12 sidebar-footer" ng-controller="footer">
     <div class="row">
-        <div class="col-xs-12 sidebar-footer__top">
+        <div class="col-xs-12 sidebar-footer__top" ng-show="subscription">
             <div class="container">
                 <p class="text text--lite text--md text-center">
                     Mantente al día de nuestros nuevos cursos, suscribete a nuestro newsletter
@@ -38,38 +38,38 @@
                 <div class="col-xs-2">
                     <ul class="list-simple list-xs">
                         <li>
-                            <a href="#">Cursos rápidos</a>
+                            <a>Cursos rápidos</a>
                         </li>
                         <li>
-                            <a href="#">Especializaciones</a>
+                            <a>Especializaciones</a>
                         </li>
                         <li>
-                            <a href="#">Biblioteca y Recursos</a>
+                            <a>Biblioteca y Recursos</a>
                         </li>
                         <li>
-                            <a href="bolsa-de-empleo.html">Bolsa de empleo</a>
+                            <a>Bolsa de empleo</a>
                         </li>
                     </ul>
                 </div>
                 <div class="col-xs-2">
                     <ul class="list-simple list-xs">
                         <li>
-                            <a href="#">Preguntas frecuentes</a>
+                            <a>Preguntas frecuentes</a>
                         </li>
                         <li>
-                            <a href="#">Términos y condiciones</a>
+                            <a>Términos y condiciones</a>
                         </li>
                         <li>
-                            <a href="#">Políticas de privacidad</a>
+                            <a>Políticas de privacidad</a>
                         </li>
                         <li>
-                            <a href="#">Nuestro blog</a>
+                            <a>Nuestro blog</a>
                         </li>
                     </ul>
                 </div>
                 <div class="col-xs-3">
                     <p class="text text--xbold text--gris">
-                        Contáctanos <a href="#" class="sidebar-footer__iconSocial sidebar-footer__iconSocial--facebook"><span class="icon-facebook"></span></a> <a href="#" class="sidebar-footer__iconSocial sidebar-footer__iconSocial--twitter"><span class="icon-twitter"></span></a>
+                        Contáctanos <a class="sidebar-footer__iconSocial sidebar-footer__iconSocial--facebook"><span class="icon-facebook"></span></a> <a class="sidebar-footer__iconSocial sidebar-footer__iconSocial--twitter"><span class="icon-twitter"></span></a>
                     </p>
                     <p class="text text--gris text--xs margin--t2">
                         ©Marketing.university 2015
