--- a/views/login.html
+++ b/views/login.html
@@ -378,35 +378,7 @@
 
         <div class="row">
             <div class="col-xs-10 col-xs-offset-1 margin--t2">
-                <div class="col-xs-15 margin--t05 margin--b05">
-                    <img src="images/logo-icesi.png" alt="" class="img-responsive center-block">
-                </div>
-                <div class="col-xs-15 margin--t05 margin--b05">
-                    <img src="images/logo-icesi.png" alt="" class="img-responsive center-block">
-                </div>
-                <div class="col-xs-15 margin--t05 margin--b05">
-                    <img src="images/logo-icesi.png" alt="" class="img-responsive center-block">
-                </div>
-                <div class="col-xs-15 margin--t05 margin--b05">
-                    <img src="images/logo-icesi.png" alt="" class="img-responsive center-block">
-                </div>
-                <div class="col-xs-15 margin--t05 margin--b05">
-                    <img src="images/logo-icesi.png" alt="" class="img-responsive center-block">
-                </div>
-                <div class="clearfix"></div>
-                <div class="col-xs-15 margin--t05 margin--b05">
-                    <img src="images/logo-icesi.png" alt="" class="img-responsive center-block">
-                </div>
-                <div class="col-xs-15 margin--t05 margin--b05">
-                    <img src="images/logo-icesi.png" alt="" class="img-responsive center-block">
-                </div>
-                <div class="col-xs-15 margin--t05 margin--b05">
-                    <img src="images/logo-icesi.png" alt="" class="img-responsive center-block">
-                </div>
-                <div class="col-xs-15 margin--t05 margin--b05">
-                    <img src="images/logo-icesi.png" alt="" class="img-responsive center-block">
-                </div>
-                <div class="col-xs-15 margin--t05 margin--b05">
+                <div class="margin--t05 margin--b05">
                     <img src="images/logo-icesi.png" alt="" class="img-responsive center-block">
                 </div>
             </div>
