--- a/views/navbar.html
+++ b/views/navbar.html
@@ -24,7 +24,7 @@
                             <a class="btn btn--academy btn-verde btn--right btn-lg btn--ingresar" data-toggle="modal" data-target="#js-ingreso" ng-show="btnSingUp">INGRESAR</a>
                             <a class="btn btn--academy btn-danger btn--right btn-lg btn--ingresar" ng-show="btnLogout" ng-click="logout()">SALIR</a>
 
-                            <a class="btn btn--academy btn-azul btn--right btn-lg btn--ingresar" ng-click="showMenu()">
+                            <a class="btn btn--academy btn-azul btn--right btn-lg btn--ingresar"  ng-hide="hideMenu" ng-click="showMenu()">
                                 <span class="icon-reorder"></span>
                             </a>
 
