--- a/views/profile.html
+++ b/views/profile.html
@@ -58,7 +58,7 @@
                                 </td>
                                 <td class="text-right">
                                     <span class="label label-naranja text--md">
-                                        2
+                                        0
                                     </span>
                                 </td>
                             </tr>
@@ -73,7 +73,7 @@
                                 </td>
                                 <td class="text-right">
                                     <span class="label label-rojo text--md">
-                                        6
+                                        0
                                     </span>
                                 </td>
                             </tr>
@@ -88,7 +88,7 @@
                                 </td>
                                 <td class="text-right">
                                     <span class="label label-azul text--md">
-                                        8
+                                        0
                                     </span>
                                 </td>
                             </tr>
@@ -106,12 +106,27 @@
                 <!-- Tab Angular boostrap -->
                 <tabset class="nav-tabs">
                     <tab heading="Iniciados">
+                        <div class="container-soon">
+                            <div class="coming_soon">
+                                <p>Próximamente en Febrero 2016</p>
+                            </div>
+                        </div>
                         <img src="images/tap1.jpg" class="img-responsive" alt="">
                     </tab>
                     <tab heading="Recomendados">
+                        <div class="container-soon">
+                            <div class="coming_soon">
+                                <p>Próximamente en Febrero 2016</p>
+                            </div>
+                        </div>
                         <img src="images/tap2.jpg" class="img-responsive" alt="">
                     </tab>
                     <tab heading="Próximamente">
+                        <div class="well">
+                            <div class="coming_soon">
+                                <p>Próximamente en Febrero 2016</p>
+                            </div>
+                        </div>
                     </tab>
                 </tabset>
             </div>
