--- a/views/login.html
+++ b/views/login.html
@@ -92,17 +92,21 @@
                 Nuestros cursos están diseñados para desarrollar competencias en las áreas del Marketing con mayor demanda laboral
             </p>
         </div>
-        <div class="col-xs-12 margin--t2">
+        <div class="col-xs-12 margin--t2" ng-controller="coursesPublic">
+
+            <!-- Courses Public -->
         
             <div class="row">
-                <div class="col-lg-3 col-xs-6 margin--t1">
+                <div class="col-lg-3 col-xs-6 margin--t1" ng-repeat="coursePublic in dataCoursesPublic | limitTo: 4">
                     <div class="col-xs-12 sidebar-bloqs2">
                         <div class="row sidebar-imageCurso">
-                            <a href=""><img src="images/Marketing-Digital-101.png" alt="" class="img-responsive center-block"></a>
+                            <a ng-href="">
+                                <img ng-src="{{coursePublic.imageCourse}}" class="img-responsive">
+                            </a>
                             <div class="col-xs-12 sidebar-imageCurso__nombre">
-                                <img src="images/profesor-nathalia-plaza.jpg" alt="" class="img-circle sidebar-imageCurso__image">
+                                <img ng-src="{{coursePublic.imageTutor}}" alt="" class="img-circle sidebar-imageCurso__image">
                                 <span class="text text--blanco">
-                                    Nathalia Plaza
+                                    {{coursePublic.tutor}}
                                 </span>
                             </div>
                             <div class="col-xs-12 sidebar-imageCurso__qualy">
@@ -114,112 +118,16 @@
                             </div>
                         </div>
                         <h3 class="text text--gris text--md text--bold margin--t2">
-                            Intro al Marketing Digital
+                            {{coursePublic.nameCourse}}
                         </h3>
                         <p class="text text--sm text--gris_cla margin--t1">
-                            Aprende e Interioriza los 10 principales conceptos básicos del Marketing y la Comunicación Digital.
+                            {{coursePublic.description}}
                         </p>
                         <p class="text text--azul_cla text--lite margin--t1">
-                            <span class="icon-time"></span> 10 Horas
+                            <span class="icon-time"></span> {{coursePublic.timeDuration}}
                         </p>
-                        <a data-toggle="modal" data-target="#js-ingreso" class="btn btn-gosh btn-gosh--gris btn-lg margin--t05">
-                            SUSCRÍBETE
-                        </a>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-xs-6 margin--t1">
-                    <div class="col-xs-12 sidebar-bloqs2">
-                        <div class="row sidebar-imageCurso">
-                            <a href=""><img src="images/Estrategia-Marketing-Digital.png" alt="" class="img-responsive center-block"></a>
-                            <div class="col-xs-12 sidebar-imageCurso__nombre">
-                                <img src="images/profesor-alex-londono.jpg" alt="" class="img-circle sidebar-imageCurso__image">
-                                <span class="text text--blanco">
-                                    Alexander Londoño
-                                </span>
-                            </div>
-                            <div class="col-xs-12 sidebar-imageCurso__qualy">
-                                <span class="icon-star"></span>
-                                <span class="icon-star"></span>
-                                <span class="icon-star"></span>
-                                <span class="icon-star"></span>
-                                <span class="icon-star"></span>
-                            </div>
-                        </div>
-                        <h3 class="text text--gris text--md text--bold margin--t2">
-                            Estrategia Digital
-                        </h3>
-                        <p class="text text--sm text--gris_cla margin--t1">
-                            Aprende a planear una estrategia de Marketing Digital partiendo de los objetivos estratégicos de tu negocio.
-                        </p>
-                        <p class="text text--azul_cla text--lite margin--t1">
-                            <span class="icon-time"></span> 20 Horas
-                        </p>
-                        <a data-toggle="modal" data-target="#js-ingreso" class="btn btn-gosh btn-gosh--gris btn-lg margin--t05">
-                            SUSCRÍBETE
-                        </a>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-xs-6 margin--t1">
-                    <div class="col-xs-12 sidebar-bloqs2">
-                        <div class="row sidebar-imageCurso">
-                            <a href=""><img src="images/Facebook-Marketing.png" alt="" class="img-responsive center-block"></a>
-                            <div class="col-xs-12 sidebar-imageCurso__nombre">
-                                <img src="images/profesor-juan-diaz.jpg" alt="" class="img-circle sidebar-imageCurso__image">
-                                <span class="text text--blanco">
-                                    Guillermo Enciso
-                                </span>
-                            </div>
-                            <div class="col-xs-12 sidebar-imageCurso__qualy">
-                                <span class="icon-star"></span>
-                                <span class="icon-star"></span>
-                                <span class="icon-star"></span>
-                                <span class="icon-star"></span>
-                                <span class="icon-star-o"></span>
-                            </div>
-                        </div>
-                        <h3 class="text text--gris text--md text--bold margin--t2">
-                            Facebook Marketing 
-                        </h3>
-                        <p class="text text--sm text--gris_cla margin--t1">
-                            Aprende a usar Facebook como herramienta para incrementar las ventas y retener tus clientes.
-                        </p>
-                        <p class="text text--azul_cla text--lite margin--t1">
-                            <span class="icon-time"></span> 40 Horas
-                        </p>
-                        <a data-toggle="modal" data-target="#js-ingreso" class="btn btn-gosh btn-gosh--gris btn-lg margin--t05">
-                            SUSCRÍBETE
-                        </a>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-xs-6 margin--t1">
-                    <div class="col-xs-12 sidebar-bloqs2">
-                        <div class="row sidebar-imageCurso">
-                            <a href=""><img src="images/googleAdw.jpg" alt="" class="img-responsive center-block"></a>
-                            <div class="col-xs-12 sidebar-imageCurso__nombre">
-                                <img src="images/avatar.jpg" alt="" class="img-circle sidebar-imageCurso__image">
-                                <span class="text text--blanco">
-                                    Andrés Escobar
-                                </span>
-                            </div>
-                            <div class="col-xs-12 sidebar-imageCurso__qualy">
-                                <span class="icon-star"></span>
-                                <span class="icon-star"></span>
-                                <span class="icon-star"></span>
-                                <span class="icon-star"></span>
-                                <span class="icon-star-o"></span>
-                            </div>
-                        </div>
-                        <h3 class="text text--gris text--md text--bold margin--t2">
-                            Google Adwords 
-                        </h3>
-                        <p class="text text--sm text--gris_cla margin--t1">
-                             Aprende a crear campañas de manera profesional en 8 pasos en la plataforma de Google Adwords
-                        </p>
-                        <p class="text text--azul_cla text--lite margin--t1">
-                            <span class="icon-time"></span> 40 Horas
-                        </p>
-                        <a data-toggle="modal" data-target="#js-ingreso" class="btn btn-gosh btn-gosh--gris btn-lg margin--t05">
-                            SUSCRÍBETE
+                        <a  ng-href="#" class="btn btn-gosh btn-gosh--gris btn-lg margin--t05">
+                            MÁS INFORMACIÓN
                         </a>
                     </div>
                 </div>
@@ -228,7 +136,7 @@
             <div class="clearfix"></div>
             
             <div class="col-xs-12 margin--t3 margin--b3 text-center">
-                <a data-toggle="modal" data-target="#js-ingreso" class="btn btn--academy2 btn-rojo btn--right btn-xlg">
+                <a ng-href="#allCoursesPublic" ng-click="scroll()" class="btn btn--academy2 btn-rojo btn--right btn-xlg">
                     <span class="text--upper">ver todos los cursos</span>
                 </a>
             </div>
