--- a/views/courseDetail.html
+++ b/views/courseDetail.html
@@ -1,3 +1,4 @@
+<div>
 <section class="col-xs-12 sidebar-yellowGrandient sidebar-yellowGrandient--cursos sidebar-add__montain">
     <div class="container sidebar-section">
         <div class="col-xs-7">
@@ -362,3 +363,4 @@
         </div>
     </div>
 </section>
+</div>
